# strata

./: .gitignore  README.md  pyproject.toml
demo/: demo.sh
src/strata/: __init__.py  cli.py  diff.py  display.py  git_integration.py  snapshot.py  storage.py
src/strata/collectors/: __init__.py  base.py  cloud_config.py  crontab.py  disk.py  docker.py  envvars.py  files.py  gitrepos.py  network.py  packages.py  processes.py  ssh_keys.py  system.py  systemd.py
tests/: test_cli.py  test_collectors.py  test_diff.py  test_git_integration.py  test_snapshot.py  test_storage.py
